Changes in robustHD version 0.3.0

    + Redesign of the class structure.
    
    + Functionality of sparseLTSGrid() now included in sparseLTS(); 
      sparseLTSGrid() is now a deprecated wrapper function.
    
    + New argument 's' in rlars() to select the steps along the sequence for 
      which to compute submodels
    
    + fortify() and diagnosticPlot() methods for class "seqModel".
    
    + Bugfix in predict() method for "sparseLTS" if object was computed without 
      intercept.



Changes in robustHD version 0.2.2

    + rlars() now supports data cleaning RLARS, with an extra PCA step for 
      high-dimensional data.
    
    + Bugfix in sparseLTS() for more stability of the results.
    
    + Bugfix in winsorize(): weights are now correctly returned as vector for 
      a matrix with only one column.
    
    + Bugfix in diagnosticPlot(): previous setting of devAskNewPage() is now 
      retained on exit.


Changes in robustHD version 0.2.1

    + Bugfix in rlars(): formula method now only adds function call and model 
      terms if the default method returns an "rlars" object, not if only the 
      sequence is returned.
    
    + Bugfix in rlars(): argument cl is now preferred over argument ncores for 
      parallel computing, as stated in the help file.
    
    + Plots are no longer using the opts() function from package ggplot2, which 
      is deprecated since ggplot2 version 0.9.2.


Changes in robustHD version 0.2.0

    + Graphics are now based on package ggplot2 instead of lattice.
    
    + Prediction error estimation is now based on package perry instead of 
      cvTools.
    
    + Parallel computing for sparseLTS() now available via OpenMP.
    
    + rlars() is now using C++ code for variable sequencing, including 
      parallelization of certain tasks via OpenMP.  Further parallel 
      computing is implemented on the R level via package parallel.
    