@@ -2,14 +2,14 @@ Package: robustHD
 Type: Package
 Title: Robust methods for high-dimensional data
 Version: 0.3.0
-Date: 2013-03-10
+Date: 2013-03-12
 Depends:
     R (>= 2.14.1),
     Rcpp (>= 0.9.10),
     ggplot2 (>= 0.9.2),
     MASS,
     parallel,
-    perry,
+    perry (>= 0.2.0),
     robustbase (>= 0.6-0)
 Imports:
     RcppArmadillo (>= 0.3.0),
