@@ -15,9 +15,9 @@ Robust methods for high-dimensional data, in particular linear
 Package: \tab robustHD\cr
 Type: \tab Package\cr
 Version: \tab 0.3.0\cr
-Date: \tab 2012-03-10\cr
+Date: \tab 2013-03-12\cr
 Depends: \tab R (>= 2.14.1), Rcpp (>= 0.9.10), ggplot2 (>= 0.9.2), MASS,
-parallel, perry, robustbase (>= 0.6-0)\cr
+parallel, perry (>= 0.2.0), robustbase (>= 0.6-0)\cr
 Imports: \tab RcppArmadillo (>= 0.3.0), pcaPP, stats\cr
 LinkingTo: \tab Rcpp, RcppArmadillo\cr
 Suggests: \tab mvtnorm\cr
