@@ -32,7 +32,7 @@ umat sparseSubsets(const mat& x, const vec& y, const double& lambda,
 	return indices;
 }
 
-// R interface to initialSubsetsSparse()
+// R interface to sparseSubsets()
 SEXP R_sparseSubsets(SEXP R_x, SEXP R_y, SEXP R_lambda, SEXP R_h, 
     SEXP R_subsets, SEXP R_intercept, SEXP R_eps, SEXP R_useGram) {
 	// data initializations
